[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UserInterface/Graphics/button11.png" type="Texture" id=2]
[ext_resource path="res://Objects/Background/Background.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NewGame" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 160 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/NewGame"]
margin_left = -56.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 13.0
text = "Nowa Gra"
align = 1
valign = 1

[node name="NewGameBtn" type="Button" parent="CanvasLayer/NewGame"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = -14.7933
margin_right = 56.0
margin_bottom = 12.2067
text = "Kontynuuj Gre"

[node name="Continue" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 240 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/Continue"]
margin_left = -56.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 13.0
text = "Kontynuuj"
align = 1
valign = 1

[node name="ContinueBtn" type="Button" parent="CanvasLayer/Continue"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = -14.0
margin_right = 56.0
margin_bottom = 13.0
text = "Kontynuuj Gre"

[node name="Options" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/Options"]
margin_left = -56.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 13.0
text = "Opcje"
align = 1
valign = 1

[node name="OptionsBtn" type="Button" parent="CanvasLayer/Options"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = -14.0
margin_right = 56.0
margin_bottom = 13.0
text = "Kontynuuj Gre"

[node name="About" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 400 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/About"]
margin_left = -56.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 13.0
text = "O Nas"
align = 1
valign = 1

[node name="AboutBtn" type="Button" parent="CanvasLayer/About"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = -14.0
margin_right = 56.0
margin_bottom = 13.0
text = "Kontynuuj Gre"

[node name="Exit" type="Sprite" parent="CanvasLayer"]
position = Vector2( 512, 480 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/Exit"]
margin_left = -56.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 13.0
text = "Wyjscie"
align = 1
valign = 1

[node name="ExitBtn" type="Button" parent="CanvasLayer/Exit"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -56.0
margin_top = -14.0
margin_right = 56.0
margin_bottom = 13.0
text = "Kontynuuj Gre"

[node name="Name" type="Label" parent="CanvasLayer"]
margin_right = 256.0
margin_bottom = 34.0
rect_scale = Vector2( 4, 4 )
text = "Asterielle Slayer of Dwarves "
align = 1
valign = 1

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 929.064
margin_top = 561.985
margin_right = 1024.06
margin_bottom = 575.985
text = "Flying Octopus"
align = 2
valign = 1

[node name="Background" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
[connection signal="pressed" from="CanvasLayer/NewGame/NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Continue/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Options/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/About/AboutBtn" to="." method="_on_AboutBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Exit/ExitBtn" to="." method="_on_ExitBtn_pressed"]
